kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-test
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: rest-api-test
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rest-api-test
    spec:
      restartPolicy: Always
      containers:
        - name: main
          image: eu.gcr.io/eb-main-2013/rest-api-test:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "1G"
            requests:
              cpu: 100m
              memory: 128Mi
