kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-test
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: rest-api-test
  type: ClusterIP
